xdgshellclient: fix moveresize with touch and CSD

When moveresize is done with touch we need to use the current touch
point and not the mouse position.

BUG: 438283
CCBUG: 431489
(cherry picked from commit f54d7a2697261754cfcfcc06d0fb5682955f1859)